fetch city info and display it

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
 <body>
 
+  <div class="top">
+    <h1 id="city-name">City</h1>
+    <img src="#">
+  </div>
+  <div id="temp-container">
+    <span id="temprature"></span>
+    <span id="mode">°C</span>
+  </div>
   <script src="./script.js"></script>
 </body>
 
