restructure code to hide api key

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <span id="temprature"></span>
     <span id="mode">°C</span>
   </div>
+  <script src="./config.js"></script>
   <script src="./script.js"></script>
 </body>
 
